fixed text alignment of CTA

--- a/src/components/MainCTA/styles.module.css
+++ b/src/components/MainCTA/styles.module.css
@@ -14,6 +14,7 @@
 }
 
 .tooltipContainer {
+  text-align: center;
   position: relative;
   display: inline-block;
 }
